# Arogya-Mitra-Health-Companion

./: .gitignore  .replit  GITHUB_COMPARISON.md  README.md  admin_access.py  admin_portal.py  app.py  arogya_mitra.db  commit_app_only.ps1  database.py  emergency_sos.py  health_chatbot.py  health_dashboard.py  ocr_analyzer.py  pyproject.toml  requirements.txt  translator.py  utils.py
.streamlit/: config.toml
AIStudyCoach/: .gitignore  BUGS_AND_ISSUES.md  IMPROVEMENT_SUGGESTIONS.md  README.md  admin_portal.py  app.py  arogya_mitra.db  database.py  db_router.py  indian_states_cities.py  mysql_manager.py  ocr_analyzer.py  pyproject.toml  requirements.txt  risk_scoring.py  speech_notes.py  summarizer.py  utils.py
attached_assets/: Pasted-Of-course-Here-is-a-plan-to-enhance-your-project-for-the-hackathon-focusing-on-using-Python-and-St-1758460333702_1758460333702.txt
