[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "googletrans==4.0.0rc1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.49.1",
]
