[project]
name = "arogya-mitra-health-companion"
version = "0.1.0"
description = "AI-powered health companion app for migrant users"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "googletrans==4.0.0rc1",
    "pandas>=2.3.2",
    "plotly>=5.18.0,<6",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.35.0,<2",
    "pillow>=10.3.0",
    "opencv-python-headless>=4.10.0",
]
